--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,11 @@ name = "barc4beams"
 version = "2025.11.11"
 description = "A Python project for: standardization, statistics, and plotting ray-traced photon beams (PyOptiX, SHADOW3/4)."
 readme = "README.md"
-license = { text = "CECILL-2.1" }
+license = "CECILL-2.1"
 authors = [{ name = "Rafael Celestre", email = "rafael.celestre@synchrotron-soleil.fr" }]
 keywords = ["ray-tracing", "beamline design", "x-ray optics", "optics"]
 classifiers = [
   "Programming Language :: Python :: 3",
-  "License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)",
   "Operating System :: OS Independent",
   "Intended Audience :: Science/Research",
   "Topic :: Scientific/Engineering :: Physics"
