--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,11 @@ classifiers = [
 ]
 requires-python = ">=3.10"
 dependencies = [
+    "numpy>=1.23",
+    "pandas>=1.5",
+    "scipy>=1.10",
+    "matplotlib>=3.6",
+    "h5py>=3.8",
 ]
 
 [project.urls]
@@ -26,3 +31,8 @@ Repository = "https://github.com/barc4/barc4beams"
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=7.0",
+]
